RESOLVED FIXED278532
[Writing Tools] Selection sometimes may not show up when a session's animations finish
https://bugs.webkit.org/show_bug.cgi?id=278532
Summary [Writing Tools] Selection sometimes may not show up when a session's animatio...
Richard Robinson
Reported 2024-08-22 11:52:11 PDT
Attachments
Richard Robinson
Comment 1 2024-08-22 13:23:46 PDT
EWS
Comment 2 2024-08-23 11:38:05 PDT
Committed 282666@main (4c0d1d609b41): <https://commits.webkit.org/282666@main> Reviewed commits have been landed. Closing PR #32604 and removing active labels.
EWS
Comment 3 2024-08-27 13:54:50 PDT
Committed 280938.280@safari-7619-branch (ff8cacd4a7e7): <https://commits.webkit.org/280938.280@safari-7619-branch> Reviewed commits have been landed. Closing PR #1664 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.