[Writing Tools] Selection sometimes may not show up when a session's animations finish https://bugs.webkit.org/show_bug.cgi?id=278532 rdar://134516446

Reviewed by Abrar Rahman Protyasha.

There is currently a race condition between when the replace animation ends and when the replacement
is complete which causes `showSelectionForActiveWritingToolsSession` to not properly reveal the selection.

Fix by always checking the condition in `_didEndPartialIntelligenceTextPonderingAnimation` instead.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _didEndPartialIntelligenceTextPonderingAnimation]):
(-[WKWebView _intelligenceTextPonderingAnimationIsComplete]): Deleted.
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h:
* Source/WebKit/UIProcess/Cocoa/PageClientImplCocoa.h:
* Source/WebKit/UIProcess/Cocoa/PageClientImplCocoa.mm:
* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::showSelectionForActiveWritingToolsSession):
(WebKit::WebPageProxy::showSelectionForActiveWritingToolsSessionIfNeeded): Deleted.
* Source/WebKit/UIProcess/PageClient.h:
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView replacementEffectDidComplete]):
* Source/WebKit/UIProcess/mac/WKTextAnimationManager.mm:
(-[WKTextAnimationManager addTextAnimationForAnimationID:withData:]):

Canonical link: https://commits.webkit.org/282666@main