Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h
@@ -425,7 +425,6 @@ struct PerWebProcessState {
 #endif
 
 - (void)_didEndPartialIntelligenceTextPonderingAnimation;
-- (BOOL)_intelligenceTextPonderingAnimationIsComplete;
 - (BOOL)_writingToolsTextReplacementsFinished;
 
 - (void)_addTextAnimationForAnimationID:(NSUUID *)uuid withData:(const WebCore::TextAnimationData&)styleData;
